load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = ["util.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachprod-microbench/util",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/roachprod",
        "//pkg/roachprod/install",
        "//pkg/roachprod/logger",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_x_exp//maps",
    ],
)
